Corrected a lot of issues in in the example proj.
updated the package to configure MegaCityOne upon installation

--- a/MegaCityOne.Mvc.Example/Views/Home/Index.cshtml
+++ b/MegaCityOne.Mvc.Example/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using MegaCityOne.Mvc
-@model MegaCityOne.Example.Mvc.Models.HomeModel
+﻿@model MegaCityOne.Mvc.Example.Models.HomeModel
 @{
     ViewBag.Title = "Home";
     ViewBag.ActionAvailable = false;
